--- a/claim/test.html
+++ b/claim/test.html
@@ -47,5 +47,7 @@
             }
         });
     </script>
+        <script src="https://cdn.jsdelivr.net/npm/ethers@5/dist/ethers.min.js"></script>
+
 </body>
 </html>
