--- a/claim/test.html
+++ b/claim/test.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>User Role</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Role Test Page</title>
 </head>
 <body>
-    <h1>User Role</h1>
-    <div id="userRole">Role: Loading...</div>
+  <h1>User Role</h1>
+  <p id="userRole"></p>
+  <script>
+    // Import necessary functions
+    import { determineRoleAndFetchDetails } from './roleDetermination.js';
+    import { showError } from './uiHelpers.js'; // Assuming showError displays an error message
 
-    <script type="module">
-        // Function to update the displayed role based on the connected wallet
-        async function updateUserRole() {
-            try {
-                const provider = new ethers.providers.Web3Provider(window.ethereum);
-                const signer = provider.getSigner();
-                const address = await signer.getAddress();
-
-                // Get contract address and ABI from contractConfig
-                const { contractAddress, contractABI } = contractConfig;
-
-                // Instantiate the contract
-                const contract = new ethers.Contract(contractAddress, contractABI, signer);
-
-                // Call the contract function to determine the role
-                const role = await contract.determineRole(address);
-
-                // Update the user role in the UI
-                const userRoleElement = document.getElementById('userRole');
-                userRoleElement.textContent = `Role: ${role}`;
-            } catch (error) {
-                console.error('Error determining user role:', error);
-                const userRoleElement = document.getElementById('userRole');
-                userRoleElement.textContent = 'Role: Error';
-            }
+    async function requestUserAccount() {
+      try {
+        const { ethereum } = window;
+        if (ethereum) {
+          const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+          return accounts[0];
+        } else {
+          showError("Please install a wallet to connect.");
+          return null;
         }
+      } catch (error) {
+        console.error("Error requesting user account:", error);
+        showError("An error occurred while connecting to the wallet.");
+        return null;
+      }
+    }
 
-        // Event listener for connecting the wallet and updating the user role
-        document.addEventListener('DOMContentLoaded', async () => {
-            try {
-                await window.ethereum.request({ method: 'eth_requestAccounts' });
-                await updateUserRole();
-            } catch (error) {
-                console.error('Error connecting wallet:', error);
-                const userRoleElement = document.getElementById('userRole');
-                userRoleElement.textContent = 'Role: Error';
-            }
-        });
-    </script>
-        <script src="https://cdn.jsdelivr.net/npm/ethers@5/dist/ethers.min.js"></script>
+    async function showUserRole() {
+      const userAddress = await requestUserAccount();
+      if (userAddress) {
+        try {
+          const roleDetails = await determineRoleAndFetchDetails(userAddress);
+          if (roleDetails) {
+            document.getElementById('userRole').textContent = roleDetails.role;
+          } else {
+            showError("Unable to determine user role.");
+          }
+        } catch (error) {
+          console.error("Error fetching user role:", error);
+          showError("An error occurred. Please try again later.");
+        }
+      }
+    }
 
+    showUserRole();
+  </script>
 </body>
 </html>
