--- a/claim/test.html
+++ b/claim/test.html
@@ -8,7 +8,7 @@
 <body>
   <h1>User Role</h1>
   <p id="userRole"></p>
-  <script>
+  <script type="module">
     // Import necessary functions
     import { determineRoleAndFetchDetails } from './roleDetermination.js';
     import { showError } from './uiHelpers.js'; // Assuming showError displays an error message
