--- a/claim/test.html
+++ b/claim/test.html
@@ -10,8 +10,8 @@
   <p id="userRole"></p>
   <script type="module">
     // Import necessary functions
-    import { determineRoleAndFetchDetails } from './roleDetermination.js';
-    import { showError } from './uiHelpers.js'; // Assuming showError displays an error message
+    import { determineRoleAndFetchDetails } from './js/roleDetermination.js';
+    import { showError } from './js/uiHelpers.js'; // Assuming showError displays an error message
 
     async function requestUserAccount() {
       try {
