--- a/claim/index1.html
+++ b/claim/index1.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vesting Data</title>
+    <title>PLRT Vesting</title>
 </head>
 <body>
-    <h1>Vesting Data</h1>
+    <h1>PLRT Vesting</h1>
     <div id="walletInfo"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/web3@1.3.0/dist/web3.min.js"></script>
@@ -690,7 +690,7 @@
 		"stateMutability": "nonpayable",
 		"type": "function"
 	}
-]; // Replace with your contract ABI
+]; 
 
         // Instantiate contract
         const contract = new web3.eth.Contract(contractABI, contractAddress);
@@ -704,17 +704,30 @@
             const privateSaleNFTDetails = await contract.methods.getPrivateSaleNFTVestingDetails(userAddress).call();
             const treasuryDetails = await contract.methods.getTreasuryVestingDetails().call();
 
+		// Example: Call getTeamMemberVestingDetails
+const teamMemberAddress = '0x91Dd086921290201AF8a2B5732c85c7b707EeBBe';
+contract.methods.getTeamMemberVestingDetails(teamMemberAddress).call((error, result) => {
+    if (error) {
+        console.error('Error:', error);
+    } else {
+        console.log('Team Member Vesting Details:', result);
+    }
+}
+
             // Display vesting data
             document.getElementById('walletInfo').innerHTML = `
                 <h2>Wallet Address: ${userAddress}</h2>
+		
                 <h3>Team Member Vesting Details:</h3>
                 <p>Total Allocation: ${teamMemberDetails[0]}</p>
                 <p>Claimed Amount: ${teamMemberDetails[1]}</p>
                 <p>Remaining Claimable Amount: ${teamMemberDetails[2]}</p>
+		
                 <h3>Private Sale NFT Vesting Details:</h3>
                 <p>Total Allocation: ${privateSaleNFTDetails[0]}</p>
                 <p>Claimed Amount: ${privateSaleNFTDetails[1]}</p>
                 <p>Remaining Claimable Amount: ${privateSaleNFTDetails[2]}</p>
+		
                 <h3>Treasury Vesting Details:</h3>
                 <p>Total Allocation: ${treasuryDetails[0]}</p>
                 <p>Claimed Amount: ${treasuryDetails[1]}</p>
@@ -722,5 +735,7 @@
             `;
         });
     </script>
+
+	
 </body>
 </html>
