--- a/claim/index.html
+++ b/claim/index.html
@@ -31,7 +31,9 @@
         <!-- Team Member Details Section -->
         <div id="teamMemberDetails" style="display: none;">
             <h2>Team Member Details</h2>
-            <!-- Team member specific details here -->
+            <p>Total Allocation: ${teamMemberDetails[0]}</p>
+            <p>Claimed Amount: ${teamMemberDetails[1]}</p>
+            <p>Remaining Claimable Amount: ${teamMemberDetails[2]}</p>
         </div>
 
         <!-- Private Sale NFT Holder Details Section -->
