--- a/claim/index.html
+++ b/claim/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <!-- Treasury Details Section -->
-        <div id="treasuryDetails" style="display: none;">
+        <div id="treasuryDetails">
             <h2>Treasury Details</h2>
             <p id="treasuryWallet">Treasury Wallet Address: </p>
             <p id="treasuryTotalAllocation">Total Allocation: </p>
