--- a/claim/index.html
+++ b/claim/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <!-- Team Member Details Section -->
-        <div id="teamMemberDetails" style="display: none;">
+        <div id="teamMemberDetails" style="display: block;">
             <h2>Team Member Details</h2>
             <p>Total Allocation: ${teamMemberDetails[0]}</p>
             <p>Claimed Amount: ${teamMemberDetails[1]}</p>
@@ -43,7 +43,7 @@
         </div>
 
         <!-- Treasury Details Section -->
-        <div id="treasuryDetails">
+        <div id="treasuryDetails" style="display: block;">
             <h2>Treasury Details</h2>
             <p id="treasuryWallet">Treasury Wallet Address: </p>
             <p id="treasuryTotalAllocation">Total Allocation: </p>
