--- a/claim/test.html
+++ b/claim/test.html
@@ -9,7 +9,7 @@
     <h1>PLRT Vesting</h1>
     <div id="walletInfo"></div>
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.0.0/dist/ethers.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
