--- a/claim/test.html
+++ b/claim/test.html
@@ -10,6 +10,6 @@
     <div id="walletInfo"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.0.34/dist/ethers.min.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
