--- a/claim/test.html
+++ b/claim/test.html
@@ -9,7 +9,9 @@
     <h1>PLRT Vesting</h1>
     <div id="walletInfo"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.esm.min.js"></script>
+<!-- In your HTML file -->
+<script src="https://cdn.ethers.io/scripts/ethers-v4.min.js" charset="utf-8"></script>
+
 
     <script type="module" src="script.js"></script>
 </body>
