--- a/claim/index1.html
+++ b/claim/index1.html
@@ -709,21 +709,21 @@
             document.getElementById('walletInfo').innerHTML = `
                 <h2>Wallet Address: ${userAddress}</h2>
 
-                <div id="teamSection">
+                <div>
                     <h3>Team Member Vesting Details:</h3>
                     <p>Total Allocation: ${teamMemberDetails[0]}</p>
                     <p>Claimed Amount: ${teamMemberDetails[1]}</p>
                     <p>Remaining Claimable Amount: ${teamMemberDetails[2]}</p>
                 </div>
 
-                <div id="privateSaleNFTSection">
+                <div>
                     <h3>Private Sale NFT Vesting Details:</h3>
                     <p>Total Allocation: ${privateSaleNFTDetails[0]}</p>
                     <p>Claimed Amount: ${privateSaleNFTDetails[1]}</p>
                     <p>Remaining Claimable Amount: ${privateSaleNFTDetails[2]}</p>
                 </div>
 
-                <div id="treasurySection">
+                <div>
                     <h3>Treasury Vesting Details:</h3>
                     <p>Total Allocation: ${treasuryDetails[0]}</p>
                     <p>Claimed Amount: ${treasuryDetails[1]}</p>
