--- a/claim/test.html
+++ b/claim/test.html
@@ -113,5 +113,8 @@
 
         main().catch(console.error);
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.esm.min.js" type="module"></script>
+    <script type="module" src="findNFTs.js"></script> <!-- Point to your external JS file -->
 </body>
 </html>
